Header.css
body{
   background: #18161b;
   margin: 0px;
   width: 100%;
   height: 100%;
   font-family: 'Roboto', sans-serif;
   color: white;
}

.pagestart{
   background-color: #f57576;
   height: 5px;
   flex-basis: 75%;
}

.header{
   display: flex;
   flex-direction: row;
   background: #232027;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 10px;
   padding-right: 10px;
   justify-content: space-evenly;
   width: 100%;
}

.headerChild{
   display: flex;
   flex-direction: row;
   margin-left: auto;
   margin-right: auto;
   width: 70%;
}

.facePic{
   width: 280px;
   border-radius: 50%;
   margin-right: 20px;
}

.name{
   margin-top: 40px;
   margin-bottom: 0px;
   font-size: 40px;
   font-weight: 900;
}

.desc{
   margin-top: 5px;
   font-size: 20px;
   font-weight: 600;
}

@media (max-width: 1000px) {
   .facePic{
      width: 280px;
      border-radius: 50%;
      margin: 0px;
   }
   .headerChild{
      width: auto;
      flex-direction: column;
      align-items: center;
   }
   .profile{
      text-align: center;
   }

   @media (max-width: 500px) {
      
   }
 }

